# shell-shortcuts

./: .gitignore  Cargo.toml  Makefile  README.md
debian/: changelog  control  copyright  rules
src/: app.rs  main.rs  misc.rs  widgets.rs
