[package]
name = "pop-shell-shortcuts"
version = "0.1.0"
license = "GPL-3.0"
readme = "README.md"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8", features = ["v3_22"] }
cascade = "0.1"
glib = "0.9"
gio = "0.8"
enclose = "1.1.8"
derive_more = "0.99.3"
gdk = "0.12.1"
pango = "0.8.0"
resvg = { version = "0.9.0", features = ["cairo-backend"] }
