[package]
name = "pop-shell-shortcuts"
version = "0.1.0"
license = "GPL-3.0"
readme = "README.md"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cascade = "0.1.4"
derive_more = "0.99.5"
enclose = "1.1.8"
gdk = "0.13.0"
gio = "0.9.0"
glib = "0.10.0"
gtk = { version = "0.9.0", features = ["v3_22"] }
pango = "0.9.0"
# resvg = { version = "0.9.0", features = ["cairo-backend"] }

